--- a/checkout.html
+++ b/checkout.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="/CSS/all.css">
     <link rel="stylesheet" href="/CSS/css reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../assets/css/pages/checkout.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <script type="module" crossorigin src="/I-need-this/assets/main-D8UL6ObJ.js"></script>
   <link rel="stylesheet" crossorigin href="/I-need-this/assets/main-LH9l7AXJ.css">
+  <link rel="stylesheet" crossorigin href="/I-need-this/assets/checkout-Dlu92jl3.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg py-0">
@@ -33,7 +33,7 @@
       <ul class="navbar-nav d-none d-lg-flex align-items-center mb-0">
         <li class="nav-item"><a class="nav-link px-2 m-6 text-n-80" href="brand.html">品牌介紹</a></li>
         <li class="nav-item"><a class="nav-link px-2 m-6 text-n-80" href="product.html">所有商品</a></li>
-        <li class="nav-item"><a class="nav-link p-2 m-6 text-n-80" href="checkout.html"><span class="material-icons">shopping_cart</span></a></li>
+        <li class="nav-item"><a class="nav-link p-2 m-6 text-n-80" href="product.html"><span class="material-icons">shopping_cart</span></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle btn-pdark px-6 py-7" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             註冊 / 登入
